<resources>
    <string name="app_name">PokEat</string>
    <string name="email_hint">Inserisci email</string>
    <string name="password_hint">Inserisci password</string>
    <string name="confirm_password_hint">Conferma password</string>
    <string name="login_hint">Login</string>
    <string name="register_hint">Registrati</string>
    <string name="registration_title">Registrazione</string>
    <string name="login_title">Login</string>
    <string name="login_success">Login effettuato correttamente</string>
    <string name="login_failed">Credenziali invalide</string>
    <string name="email_invalid">Email non valida</string>
    <string name="password_invalid">Password non valida</string>
    <string name="btn_register_pressed">Hai premuto il tasto registrati</string>
    <string name="phone_hint">Inserisci numero di telefono</string>
    <string name="login">Login</string>
    <string name="checkout">Checkout</string>
    <string name="restaurant_list">Elenco ristoranti</string>
    <string name="checkout_title">Riepilogo ordine</string>
    <string name="menu">Vedi menu</string>
    <string name="checkout_total">Totale: </string>
    <string name="importo_minimo">Importo minimo: </string>
    <string name="eur">€</string>
    <string name="proceed_payment">PROCEDI COL PAGAMENTO</string>
    <string name="empty_products">Elenco prodotti vuoto</string>
    <string name="logout">Logout</string>

</resources>
