<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_hint"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:layout_gravity="center"
        android:layout_marginTop="@android:dimen/app_icon_size"
        android:inputType="textEmailAddress"
        android:id="@+id/edTxMailRegistration"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:layout_gravity="center"
        android:layout_marginTop="@android:dimen/app_icon_size"
        android:inputType="textPassword"
        android:id="@+id/edTxPasswRegistration"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_hint"
        android:layout_gravity="center"
        android:layout_marginTop="@android:dimen/app_icon_size"
        android:inputType="number"
        android:id="@+id/edTxPhone"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@android:dimen/app_icon_size"
        android:gravity="center"
        >

        <Button
            android:id="@+id/btn_registrazione2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_hint"
            android:enabled="false"
            />

    </LinearLayout>

</LinearLayout>