<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkout_title"
        android:id="@+id/checkout_title"
        android:textSize="30dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/restaurant_name_final"
        android:layout_below="@id/checkout_title"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:textStyle="italic"
        />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/orders_rv"
        android:layout_below="@id/restaurant_name_final"
        android:layout_above="@id/pay_btn"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/pay_btn"
        android:text="@string/checkout_total"
        android:layout_marginEnd="2dp"
        android:id="@id/tot"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/pay_btn"
        android:id="@+id/checkout_total"
        android:layout_toRightOf="@+id/tot"
        android:textStyle="bold"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/proceed_payment"
        android:id="@+id/pay_btn"
        />



</RelativeLayout>