<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:id="@+id/header"
        android:paddingBottom="10dp"
        android:layout_alignParentTop="true"
        >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:src="@drawable/pizza_icon"
            android:layout_alignParentStart="true"
            android:id="@+id/img"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/restaurant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="30dp"
            android:layout_toRightOf="@id/img"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/restaurant_name"
            android:id="@+id/restaurant_address2"
            android:layout_alignStart="@id/restaurant_name"
            android:layout_marginBottom="5dp"
            />

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_place_black_24dp"
            android:layout_alignBottom="@id/restaurant_name"
            android:layout_marginEnd="35dp"
            android:id="@+id/position_img"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/restaurant_phone2"
            android:layout_below="@+id/restaurant_address2"
            android:background="@drawable/rounded_corner"
            android:textColor="@color/cardview_light_background"
            android:padding="5dp"
            android:layout_alignStart="@id/restaurant_address2"/>
    </RelativeLayout>


    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/products_rv"
        android:layout_below="@id/header"
        android:layout_above="@id/footer_wrapper"/>


    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/footer_wrapper"
        android:layout_alignParentBottom="true"
        android:elevation="30dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/footer"
            android:layout_marginHorizontal="20dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/my_progressBar"
                android:text="@string/checkout_total"
                android:layout_above="@id/my_progressBar"
                android:id="@+id/total_tv"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/minimum_order"
                android:text="@string/importo_minimo"
                android:layout_toLeftOf="@+id/minimum_order"
                android:layout_marginEnd="3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eur"
                android:layout_alignParentEnd="true"
                android:layout_alignBaseline="@+id/minimum_order"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/minimum_order"
                android:layout_alignBaseline="@id/total_tv"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"/>

            <ProgressBar
                android:id="@+id/my_progressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_above="@id/checkout_btn"
                />

            <Button
                android:id="@+id/checkout_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkout"
                android:layout_alignParentBottom="true"
                android:enabled="false"
                android:layout_marginBottom="10dp"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>



</RelativeLayout>





